# BlastSimulator2026

./: .gitattributes  .gitignore  .npmrc  .skeleton-marker-308  AGENTS.md  CLAUDE.md  Open-SWE-instructions.md  README.md  answer.md  fix_surveycalc.py  index.html  package-lock.json  package.json  run-019e281e-6a65-7470-adf4-2f3f4994cb10.json  tsconfig.json  vite.config.ts  vitest.config.ts
.langgraph/: .env.example  .gitignore  README.md  SESSION_NOTES.md  checkpointer.py  close_pr.py  graph.py  langgraph.json  llm.py  pipeline_logger.py  pyproject.toml  remove_label.py  routing.py  runner.py  set_labels.py
.langgraph/diffs/: SUMMARY.md  src__console__commands__world.ts.patch  src__core__config__RockCatalog.ts.patch  src__core__mining__BlastExecution.ts.patch  src__core__mining__Software.ts.patch  src__core__weather__WeatherEffects.ts.patch  src__core__world__RockCatalog.ts.patch  src__core__world__TerrainGen.ts.patch  src__core__world__VoxelGrid.ts.patch  src__renderer__TerrainMesh.ts.patch  tests__unit__config__RockCatalog.test.ts.patch
.langgraph/nodes/: _base.py  cherry_pick.py  code_review.py  conflict_resolver.py  fixer.py  implementer.py  integration_test_writer.py  merge_branches.py  merge_helpers.py  open_pr.py  orchestrate.py  planner.py  qualimetry_node.py  refactorer.py  review_fan_in.py  review_fan_out.py  reviewer.py  scenario_test_writer.py  setup_branches.py  skeleton_writer.py  switch_branch.py  test_fan_in.py  test_fan_out.py  test_runner.py  test_writer.py  unit_test_writer.py  validator.py  visual_tester.py
.langgraph/tools/: agent_tools.py  (+10 more)
(+650 files in other folders)
