[project]
name = "blastsimulator-langgraph"
version = "0.1.0"
description = "LangGraph autonomous development pipeline for BlastSimulator2026"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-deepseek>=1.0.1",
    "langgraph-sdk>=0.1.0",
    "gitpython>=3.1.44",
    "PyGithub>=2.5.0",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.4.26",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nodes", "tools"]
